--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-    "title": "Grayscale",
-    "name": "startbootstrap-grayscale",
-    "version": "5.0.8",
+    "title": "Maciej Pacholak",
+    "name": "personal_website",
+    "version": "1.0.0",
     "scripts": {
         "start": "node_modules/.bin/gulp watch"
     },
